--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "4dc3c92b-eb15-49f9-8b16-3e3939c81c12",
    "metadata": {},
    "outputs": [
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/02 01:38:49 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/02 01:38:49 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/03 14:59:53 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/03 14:59:53 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/02 01:38:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/03 15:00:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -510,9 +510,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4e4ea04",
+   "metadata": {},
+   "source": [
+    "#### Consecutive Numbers\n",
+    "#### https://leetcode.com/problems/consecutive-numbers/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "983086c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([StructField('id', IntegerType(), False), StructField('num', StringType(), True)])\n",
+    "df = spark.createDataFrame([[1, '1'], [2, '1'], [3, '1'], [4, '2'], [5, '1'], [6, '2'], [7, '2']], schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e634b8bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.createOrReplaceTempView('df')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d381c2eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+\n",
+      "|num|\n",
+      "+---+\n",
+      "|  1|\n",
+      "+---+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/08/03 15:05:56 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/08/03 15:05:56 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/08/03 15:05:57 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/08/03 15:05:57 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql('''with temp as (\n",
+    "                select num,\n",
+    "                    lead(num, 1) over (order by id) num1,\n",
+    "                    lead(num, 2) over (order by id) num2 \n",
+    "                from df\n",
+    "                )\n",
+    "                select distinct num \n",
+    "                from temp\n",
+    "                where num = num1\n",
+    "                and num = num2''').show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4e4ea04",
+   "id": "9cece067",
    "metadata": {},
    "outputs": [],
    "source": []
