--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/07 14:25:59 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/07 14:25:59 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/09 19:58:37 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/09 19:58:37 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/07 14:26:10 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/09 19:58:47 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -844,9 +844,389 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7cb24be7",
+   "metadata": {},
+   "source": [
+    "#### Exchange Seats -\n",
+    "#### https://leetcode.com/problems/exchange-seats/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a64a42bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import io\n",
+    "data = '''\n",
+    "id,student\n",
+    "1,Abbot\n",
+    "2,Doris\n",
+    "3,Emerson\n",
+    "4,Green\n",
+    "5,Jeames\n",
+    "'''\n",
+    "df = spark.createDataFrame(pd.read_csv(io.StringIO(data), header=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cd1317c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------+\n",
+      "| id|student|\n",
+      "+---+-------+\n",
+      "|  1|  Abbot|\n",
+      "|  2|  Doris|\n",
+      "|  3|Emerson|\n",
+      "|  4|  Green|\n",
+      "|  5| Jeames|\n",
+      "+---+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "383d983f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------+\n",
+      "| id|Student|\n",
+      "+---+-------+\n",
+      "|  1|  Doris|\n",
+      "|  2|  Abbot|\n",
+      "|  3|  Green|\n",
+      "|  4|Emerson|\n",
+      "|  5| Jeames|\n",
+      "+---+-------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/08/09 17:41:37 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/08/09 17:41:37 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/08/09 17:41:37 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/08/09 17:41:37 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/08/09 17:41:37 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_id = max(df.select('id').collect())[0]\n",
+    "df.select(when(col('id') % 2 == 1,\n",
+    "               lead('id', 1, max_id).over(Window.orderBy('id')))\n",
+    "          .otherwise(col('id') - 1).alias('id'),\n",
+    "          'Student').orderBy('id').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "088e6135",
+   "metadata": {},
+   "source": [
+    "#### Tree Node\n",
+    "#### https://leetcode.com/problems/tree-node/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "22009a33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([StructField('id', IntegerType(), False), StructField('p_id', IntegerType(), True)])\n",
+    "df = spark.createDataFrame([[1, None], [2, 1], [3, 1], [4, 2], [5, 2]], schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1587b091",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+\n",
+      "| id|p_id|\n",
+      "+---+----+\n",
+      "|  1|null|\n",
+      "|  2|   1|\n",
+      "|  3|   1|\n",
+      "|  4|   2|\n",
+      "|  5|   2|\n",
+      "+---+----+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9854cd3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+--------------------------------------------------------------------------------------------------------------+\n",
+      "| id|CASE WHEN (p_id IS NULL) THEN Root WHEN ((p_id IS NOT NULL) AND (id IN (NULL, 1, 2))) THEN Inner ELSE Leaf END|\n",
+      "+---+--------------------------------------------------------------------------------------------------------------+\n",
+      "|  1|                                                                                                          Root|\n",
+      "|  2|                                                                                                         Inner|\n",
+      "|  3|                                                                                                          Leaf|\n",
+      "|  4|                                                                                                          Leaf|\n",
+      "|  5|                                                                                                          Leaf|\n",
+      "+---+--------------------------------------------------------------------------------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_parent_ids = df.select('p_id').distinct().rdd.flatMap(lambda x: x).collect()\n",
+    "df.select('id', when(col('p_id').isNull(), 'Root')\n",
+    "          .when(col('p_id').isNotNull() & col('id').isin(distinct_parent_ids), 'Inner')\n",
+    "          .otherwise('Leaf')).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "342a7b23",
+   "metadata": {},
+   "source": [
+    "#### Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "2be51b55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf = df.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "69ed1df8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>p_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  p_id\n",
+       "0   1   NaN\n",
+       "1   2   1.0\n",
+       "2   3   1.0\n",
+       "3   4   2.0\n",
+       "4   5   2.0"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "1cad500d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "pdf['type'] = np.where(pdf['p_id'].isna(),\n",
+    "                       'Root',\n",
+    "                       np.where(pdf['id'].isin(pdf['p_id'].unique()) & pdf['p_id'].notna(),\n",
+    "                                'Inner',\n",
+    "                                'Leaf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "686d311a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Inner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Leaf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Leaf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Leaf</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id   type\n",
+       "0   1   Root\n",
+       "1   2  Inner\n",
+       "2   3   Leaf\n",
+       "3   4   Leaf\n",
+       "4   5   Leaf"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pdf[['id', 'type']]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86434b49",
+   "id": "2342b00d",
    "metadata": {},
    "outputs": [],
    "source": []
