--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "id": "9854cd3c",
    "metadata": {},
    "outputs": [
@@ -1012,24 +1012,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+--------------------------------------------------------------------------------------------------------------+\n",
-      "| id|CASE WHEN (p_id IS NULL) THEN Root WHEN ((p_id IS NOT NULL) AND (id IN (NULL, 1, 2))) THEN Inner ELSE Leaf END|\n",
-      "+---+--------------------------------------------------------------------------------------------------------------+\n",
-      "|  1|                                                                                                          Root|\n",
-      "|  2|                                                                                                         Inner|\n",
-      "|  3|                                                                                                          Leaf|\n",
-      "|  4|                                                                                                          Leaf|\n",
-      "|  5|                                                                                                          Leaf|\n",
-      "+---+--------------------------------------------------------------------------------------------------------------+\n",
+      "+---+-----+\n",
+      "| id| type|\n",
+      "+---+-----+\n",
+      "|  1| Root|\n",
+      "|  2|Inner|\n",
+      "|  3| Leaf|\n",
+      "|  4| Leaf|\n",
+      "|  5| Leaf|\n",
+      "+---+-----+\n",
       "\n"
      ]
     }
    ],
    "source": [
     "distinct_parent_ids = df.select('p_id').distinct().rdd.flatMap(lambda x: x).collect()\n",
-    "df.select('id', when(col('p_id').isNull(), 'Root')\n",
+    "df.select('id',\n",
+    "          when(col('p_id').isNull(), 'Root')\n",
     "          .when(col('p_id').isNotNull() & col('id').isin(distinct_parent_ids), 'Inner')\n",
-    "          .otherwise('Leaf')).show()"
+    "          .otherwise('Leaf').alias('type')).show()"
    ]
   },
   {
