--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
@@ -15,23 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4dc3c92b-eb15-49f9-8b16-3e3939c81c12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/09 19:58:37 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/09 19:58:37 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/09 19:58:47 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder.master('local[4]').appName('PysparkDataPipeline').getOrCreate()"
    ]
@@ -271,11 +258,15 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType\n",
-    "employees_schema = StructType([StructField('id', IntegerType(), False), StructField('name', StringType(), True)])\n",
-    "employees_df = spark.createDataFrame([[1, 'Alice'], [7, 'Bob'], [11, 'Meir'], [90, 'Winston'], [3, 'Jonathan']], schema=employees_schema)\n",
+    "employees_schema = StructType([StructField(\n",
+    "    'id', IntegerType(), False), StructField('name', StringType(), True)])\n",
+    "employees_df = spark.createDataFrame([[1, 'Alice'], [7, 'Bob'], [11, 'Meir'], [\n",
+    "                                     90, 'Winston'], [3, 'Jonathan']], schema=employees_schema)\n",
     "\n",
-    "employee_uni_schema = StructType([StructField('id', IntegerType(), False), StructField('unique_id', IntegerType(), True)])\n",
-    "employee_uni_df = spark.createDataFrame([[3, 1], [11, 2], [90, 3]], schema=employee_uni_schema)"
+    "employee_uni_schema = StructType([StructField(\n",
+    "    'id', IntegerType(), False), StructField('unique_id', IntegerType(), True)])\n",
+    "employee_uni_df = spark.createDataFrame(\n",
+    "    [[3, 1], [11, 2], [90, 3]], schema=employee_uni_schema)"
    ]
   },
   {
@@ -376,7 +367,8 @@
     "signups_schema = StructType([StructField('user_id', IntegerType(), False),\n",
     "                             StructField('time_stamp', TimestampType(), True)])\n",
     "confirmations_schema = StructType([StructField('user_id', IntegerType(), True),\n",
-    "                                   StructField('time_stamp', TimestampType(), True),\n",
+    "                                   StructField(\n",
+    "                                       'time_stamp', TimestampType(), True),\n",
     "                                   StructField('action', StringType(), True)])"
    ]
   },
@@ -426,7 +418,8 @@
     }
    ],
    "source": [
-    "result_df.groupBy('user_id').agg((sum(when(result_df.action == 'confirmed', 1).otherwise(0.00))/ count('*')).alias('confirmation_rate')).show()"
+    "result_df.groupBy('user_id').agg((sum(when(result_df.action == 'confirmed', 1).otherwise(\n",
+    "    0.00)) / count('*')).alias('confirmation_rate')).show()"
    ]
   },
   {
@@ -445,7 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema = StructType([StructField('user_id', IntegerType(), False), StructField('name', StringType(), True), StructField('mail', StringType(), True)])\n",
+    "schema = StructType([StructField('user_id', IntegerType(), False), StructField(\n",
+    "    'name', StringType(), True), StructField('mail', StringType(), True)])\n",
     "df = spark.createDataFrame([[1, 'Winston', 'winston@leetcode.com'],\n",
     "                            [2, 'Jonathan', 'jonathanisgreat'],\n",
     "                            [3, 'Annabelle', 'bella-@leetcode.com'],\n",
@@ -525,8 +519,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema = StructType([StructField('id', IntegerType(), False), StructField('num', StringType(), True)])\n",
-    "df = spark.createDataFrame([[1, '1'], [2, '1'], [3, '1'], [4, '2'], [5, '1'], [6, '2'], [7, '2']], schema=schema)"
+    "schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                    StructField('num', StringType(), True)])\n",
+    "df = spark.createDataFrame([[1, '1'], [2, '1'], [3, '1'], [4, '2'], [\n",
+    "                           5, '1'], [6, '2'], [7, '2']], schema=schema)"
    ]
   },
   {
@@ -964,8 +960,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema = StructType([StructField('id', IntegerType(), False), StructField('p_id', IntegerType(), True)])\n",
-    "df = spark.createDataFrame([[1, None], [2, 1], [3, 1], [4, 2], [5, 2]], schema=schema)"
+    "schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                    StructField('p_id', IntegerType(), True)])\n",
+    "df = spark.createDataFrame(\n",
+    "    [[1, None], [2, 1], [3, 1], [4, 2], [5, 2]], schema=schema)"
    ]
   },
   {
@@ -1026,7 +1024,8 @@
     }
    ],
    "source": [
-    "distinct_parent_ids = df.select('p_id').distinct().rdd.flatMap(lambda x: x).collect()\n",
+    "distinct_parent_ids = df.select(\n",
+    "    'p_id').distinct().rdd.flatMap(lambda x: x).collect()\n",
     "df.select('id',\n",
     "          when(col('p_id').isNull(), 'Root')\n",
     "          .when(col('p_id').isNotNull() & col('id').isin(distinct_parent_ids), 'Inner')\n",
@@ -1225,9 +1224,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2342b00d",
+   "metadata": {},
+   "source": [
+    "#### Customers who bought all products\n",
+    "#### https://leetcode.com/problems/customers-who-bought-all-products/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8c52084f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_schema = StructType([StructField('customer_id', IntegerType(), False),\n",
+    "                              StructField('product_key', IntegerType(), False)])\n",
+    "product_schema = StructType([StructField('product_key', IntegerType(), False)])\n",
+    "customer_df = spark.createDataFrame([[1, 5], [2, 6], [3, 5], [3, 6], [1, 6]], schema=customer_schema)\n",
+    "product_df = spark.createDataFrame([[5], [6]], schema=product_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5d5e7140",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----------+\n",
+      "|customer_id|product_key|\n",
+      "+-----------+-----------+\n",
+      "|          1|          5|\n",
+      "|          2|          6|\n",
+      "|          3|          5|\n",
+      "|          3|          6|\n",
+      "|          1|          6|\n",
+      "+-----------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "customer_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5a1ba8d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|product_key|\n",
+      "+-----------+\n",
+      "|          5|\n",
+      "|          6|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "product_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "447f4994",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_df = customer_df.dropDuplicates().groupBy('customer_id').agg(count(col('customer_id')).alias('count'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c9a6df6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----+\n",
+      "|customer_id|count|\n",
+      "+-----------+-----+\n",
+      "|          1|    2|\n",
+      "|          3|    2|\n",
+      "|          2|    1|\n",
+      "+-----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b823dff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|customer_id|\n",
+      "+-----------+\n",
+      "|          1|\n",
+      "|          3|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped_df.filter(col('count') == product_df.count()).select('customer_id').show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2342b00d",
+   "id": "707fa508",
    "metadata": {},
    "outputs": [],
    "source": []
