--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,23 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType\n",
-    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list\n",
+    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length\n",
     "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4dc3c92b-eb15-49f9-8b16-3e3939c81c12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "your 131072x1 screen size is bogus. expect trouble\n",
+      "23/08/11 23:50:59 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/11 23:50:59 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/08/11 23:51:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession.builder.master('local[4]').appName('PysparkDataPipeline').getOrCreate()"
    ]
@@ -1364,9 +1377,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "707fa508",
+   "metadata": {},
+   "source": [
+    "#### Triangle Judgement\n",
+    "#### https://leetcode.com/problems/triangle-judgement/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "65836b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([StructField('x', IntegerType(), False),\n",
+    "                     StructField('y', IntegerType(), False),\n",
+    "                     StructField('z', IntegerType(), False)])\n",
+    "df = spark.createDataFrame([[13, 15, 30], [10, 20, 15]], schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "18064508",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---+\n",
+      "|  x|  y|  z|\n",
+      "+---+---+---+\n",
+      "| 13| 15| 30|\n",
+      "| 10| 20| 15|\n",
+      "+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "26c491f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---+--------+\n",
+      "|  x|  y|  z|triangle|\n",
+      "+---+---+---+--------+\n",
+      "| 13| 15| 30|      No|\n",
+      "| 10| 20| 15|     Yes|\n",
+      "+---+---+---+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn('triangle', when((col('x') + col('y') > col('z')) \n",
+    "                               & (col('y') + col('z') > col('x')) \n",
+    "                               & (col('x') + col('z') > col('y')), 'Yes')\n",
+    "                               .otherwise('No')).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de5fca61",
+   "metadata": {},
+   "source": [
+    "#### Invalid Tweets\n",
+    "#### https://leetcode.com/problems/invalid-tweets/?envType=study-plan-v2&envId=30-days-of-pandas&lang=pythondata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "db55cdb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([StructField('tweet_id', IntegerType(), False),\n",
+    "                     StructField('content', StringType(), True)])\n",
+    "df = spark.createDataFrame([[1, 'Vote for Biden'], [2, 'Let us make America great again!']], schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4d327630",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------------------------------+\n",
+      "|tweet_id|content                         |\n",
+      "+--------+--------------------------------+\n",
+      "|1       |Vote for Biden                  |\n",
+      "|2       |Let us make America great again!|\n",
+      "+--------+--------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "eca8d490",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|tweet_id|\n",
+      "+--------+\n",
+      "|       2|\n",
+      "+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.filter(length(col('content')) > 15).select('tweet_id').show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "707fa508",
+   "id": "b988dd7a",
    "metadata": {},
    "outputs": [],
    "source": []
