--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
-    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType\n",
-    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType\n",
+    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year\n",
     "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4dc3c92b-eb15-49f9-8b16-3e3939c81c12",
    "metadata": {},
    "outputs": [
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/11 23:50:59 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/11 23:50:59 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/13 21:36:45 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/13 21:36:45 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/11 23:51:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/13 21:36:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -1525,9 +1525,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b988dd7a",
+   "metadata": {},
+   "source": [
+    "#### Calculate Special Bonus\n",
+    "#### https://leetcode.com/problems/calculate-special-bonus/description/?envType=study-plan-v2&envId=30-days-of-pandas&lang=pythondata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b115ee06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([StructField('employee_id', IntegerType(), False),\n",
+    "                     StructField('name', StringType(), True),\n",
+    "                     StructField('salary', IntegerType(), True)])\n",
+    "df = spark.createDataFrame([[2, 'Meir', 3000],\n",
+    "                            [3, 'Michael', 3800],\n",
+    "                            [7, 'Addilyn', 7400],\n",
+    "                            [8, 'Juan', 6100],\n",
+    "                            [9, 'Kannon', 7700]], schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3bb4769b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-------+------+\n",
+      "|employee_id|name   |salary|\n",
+      "+-----------+-------+------+\n",
+      "|2          |Meir   |3000  |\n",
+      "|3          |Michael|3800  |\n",
+      "|7          |Addilyn|7400  |\n",
+      "|8          |Juan   |6100  |\n",
+      "|9          |Kannon |7700  |\n",
+      "+-----------+-------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "38877b01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----+\n",
+      "|employee_id|bonus|\n",
+      "+-----------+-----+\n",
+      "|          2|    0|\n",
+      "|          3|    0|\n",
+      "|          7| 7400|\n",
+      "|          8|    0|\n",
+      "|          9| 7700|\n",
+      "+-----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn('bonus', when((col('employee_id') % 2 == 1) & (~col('name').startswith('M')), col('salary')).otherwise(0).alias('bonus')).select('employee_id', 'bonus').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c661b93e",
+   "metadata": {},
+   "source": [
+    "#### Market Analysis I\n",
+    "#### https://leetcode.com/problems/market-analysis-i/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4e70ac9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users_schema = StructType([StructField('user_id', IntegerType(), False),\n",
+    "                           StructField('join_date', StringType(), False),\n",
+    "                           StructField('favorite_brand', StringType(), False)])\n",
+    "users_df = spark.createDataFrame([[1, '2018-01-01', 'Lenovo'], [2, '2018-02-09', 'Samsung'], [\n",
+    "                                 3, '2018-01-09', 'LG'], [4, '2018-05-21', 'HP']], schema=users_schema)\n",
+    "\n",
+    "orders_schema = StructType([StructField('order_id', IntegerType(), False),\n",
+    "                            StructField('order_date', StringType(), False),\n",
+    "                            StructField('item_id', IntegerType(), False),\n",
+    "                            StructField('buyer_id', IntegerType(), False),\n",
+    "                            StructField('seller_id', IntegerType(), False)])\n",
+    "orders_df = spark.createDataFrame([[1, '2019-08-01', 4, 1, 2],\n",
+    "                                   [2, '2018-08-02', 2, 1, 3],\n",
+    "                                   [3, '2019-08-03', 3, 2, 3],\n",
+    "                                   [4, '2018-08-04', 1, 4, 2],\n",
+    "                                   [5, '2018-08-04', 1, 3, 4],\n",
+    "                                   [6, '2019-08-05', 2, 2, 4]], schema=orders_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "08ed6947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users_df = users_df.withColumn('join_date', col('join_date').cast('date'))\n",
+    "orders_df = orders_df.withColumn('order_date', col('order_date').cast('date'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "af74a86a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- user_id: integer (nullable = false)\n",
+      " |-- join_date: date (nullable = true)\n",
+      " |-- favorite_brand: string (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "users_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "29cfd85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- order_id: integer (nullable = false)\n",
+      " |-- order_date: date (nullable = true)\n",
+      " |-- item_id: integer (nullable = false)\n",
+      " |-- buyer_id: integer (nullable = false)\n",
+      " |-- seller_id: integer (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "orders_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d4daf193",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------------+\n",
+      "|buyer_id|orders_in_2019|\n",
+      "+--------+--------------+\n",
+      "|       1|             1|\n",
+      "|       2|             2|\n",
+      "+--------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "orders_temp = orders_df.filter(year(col('order_date')) == 2019).groupBy(col('buyer_id')).agg(count('order_id').alias('orders_in_2019'))\n",
+    "orders_temp.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9bb5b945",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----------+--------------+\n",
+      "|buyer_id| join_date|orders_in_2019|\n",
+      "+--------+----------+--------------+\n",
+      "|       1|2018-01-01|             1|\n",
+      "|       2|2018-02-09|             2|\n",
+      "|       3|2018-01-09|             0|\n",
+      "|       4|2018-05-21|             0|\n",
+      "+--------+----------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "users_df.join(orders_temp, users_df.user_id == orders_temp.buyer_id, how='left')\\\n",
+    "    .select(col('user_id').alias('buyer_id'), 'join_date', 'orders_in_2019')\\\n",
+    "    .fillna(0, subset=['orders_in_2019']).show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b988dd7a",
+   "id": "d80767ae",
    "metadata": {},
    "outputs": [],
    "source": []
