Adding Department Highest Salary solution

--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/13 21:36:45 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/13 21:36:45 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/15 16:04:17 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/15 16:04:17 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/13 21:36:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/15 16:04:27 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -1750,9 +1750,159 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d80767ae",
+   "metadata": {},
+   "source": [
+    "#### Department Highest Salary\n",
+    "#### https://leetcode.com/problems/department-highest-salary/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fa2fb822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "employee_schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                              StructField('name', StringType(), False),\n",
+    "                              StructField('salary', IntegerType(), False),\n",
+    "                              StructField('departmentId', IntegerType(), False)])\n",
+    "employee_df = spark.createDataFrame([[1, 'Joe', 70000, 1],\n",
+    "                                    [2, 'Jim', 90000, 1],\n",
+    "                                    [3, 'Henry', 80000, 2],\n",
+    "                                    [4, 'Sam', 60000, 2],\n",
+    "                                    [5, 'Max', 90000, 1]], schema=employee_schema)\n",
+    "\n",
+    "department_schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                                StructField('name', StringType(), False)])\n",
+    "department_df = spark.createDataFrame([[1, 'IT'],\n",
+    "                                       [2, 'Sales']], schema=department_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0d5c4ed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------+------------+\n",
+      "| id| name|salary|departmentId|\n",
+      "+---+-----+------+------------+\n",
+      "|  1|  Joe| 70000|           1|\n",
+      "|  2|  Jim| 90000|           1|\n",
+      "|  3|Henry| 80000|           2|\n",
+      "|  4|  Sam| 60000|           2|\n",
+      "|  5|  Max| 90000|           1|\n",
+      "+---+-----+------+------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "employee_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "000e161e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+\n",
+      "| id| name|\n",
+      "+---+-----+\n",
+      "|  1|   IT|\n",
+      "|  2|Sales|\n",
+      "+---+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "department_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e7289cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+----------+\n",
+      "|departmentId|max_salary|\n",
+      "+------------+----------+\n",
+      "|           1|     90000|\n",
+      "|           2|     80000|\n",
+      "+------------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_salary = employee_df.groupby(col('departmentId')).max('salary').withColumnRenamed('max(salary)', 'max_salary')\n",
+    "max_salary.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fe30acff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------+------+\n",
+      "|Department|Employee|Salary|\n",
+      "+----------+--------+------+\n",
+      "|IT        |Max     |90000 |\n",
+      "|IT        |Jim     |90000 |\n",
+      "|Sales     |Henry   |80000 |\n",
+      "+----------+--------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_salary = max_salary.withColumnRenamed('departmentId', 'depId')\n",
+    "employee_df = employee_df.withColumnRenamed('name', 'empName')\n",
+    "employee_df.join(max_salary, \n",
+    "                 (employee_df['departmentId'] == max_salary['depId']) \n",
+    "                 & (employee_df['salary'] == max_salary['max_salary']), \n",
+    "                 how='inner')\\\n",
+    "    .join(department_df, \n",
+    "          employee_df['departmentId'] == department_df['id'], \n",
+    "          how='inner')\\\n",
+    "    .select(col('name').alias('Department'), col('empName').alias('Employee'), col('salary').alias('Salary')).show(truncate=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d80767ae",
+   "id": "1952ce7a",
    "metadata": {},
    "outputs": [],
    "source": []
