Adding the number of rich customers problem

--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType\n",
-    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year\n",
+    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year, countDistinct\n",
     "from datetime import datetime"
    ]
   },
@@ -33,7 +33,8 @@
     }
    ],
    "source": [
-    "spark = SparkSession.builder.master('local[4]').appName('PysparkDataPipeline').getOrCreate()"
+    "spark = SparkSession.builder.master('local[4]').appName(\n",
+    "    'PysparkDataPipeline').getOrCreate()"
    ]
   },
   {
@@ -102,7 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = spark.createDataFrame([[1, 'a'], [2, 'b'], [3, 'c'], [None, 'd']], schema=schema)"
+    "df2 = spark.createDataFrame(\n",
+    "    [[1, 'a'], [2, 'b'], [3, 'c'], [None, 'd']], schema=schema)"
    ]
   },
   {
@@ -358,7 +360,8 @@
     }
    ],
    "source": [
-    "employees_df.join(employee_uni_df, how='left', on=['id']).select('unique_id', 'name').show()"
+    "employees_df.join(employee_uni_df, how='left', on=[\n",
+    "                  'id']).select('unique_id', 'name').show()"
    ]
   },
   {
@@ -1255,7 +1258,8 @@
     "customer_schema = StructType([StructField('customer_id', IntegerType(), False),\n",
     "                              StructField('product_key', IntegerType(), False)])\n",
     "product_schema = StructType([StructField('product_key', IntegerType(), False)])\n",
-    "customer_df = spark.createDataFrame([[1, 5], [2, 6], [3, 5], [3, 6], [1, 6]], schema=customer_schema)\n",
+    "customer_df = spark.createDataFrame(\n",
+    "    [[1, 5], [2, 6], [3, 5], [3, 6], [1, 6]], schema=customer_schema)\n",
     "product_df = spark.createDataFrame([[5], [6]], schema=product_schema)"
    ]
   },
@@ -1324,7 +1328,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grouped_df = customer_df.dropDuplicates().groupBy('customer_id').agg(count(col('customer_id')).alias('count'))"
+    "grouped_df = customer_df.dropDuplicates().groupBy(\n",
+    "    'customer_id').agg(count(col('customer_id')).alias('count'))"
    ]
   },
   {
@@ -1373,7 +1378,8 @@
     }
    ],
    "source": [
-    "grouped_df.filter(col('count') == product_df.count()).select('customer_id').show()"
+    "grouped_df.filter(col('count') == product_df.count()\n",
+    "                  ).select('customer_id').show()"
    ]
   },
   {
@@ -1450,10 +1456,10 @@
     }
    ],
    "source": [
-    "df.withColumn('triangle', when((col('x') + col('y') > col('z')) \n",
-    "                               & (col('y') + col('z') > col('x')) \n",
+    "df.withColumn('triangle', when((col('x') + col('y') > col('z'))\n",
+    "                               & (col('y') + col('z') > col('x'))\n",
     "                               & (col('x') + col('z') > col('y')), 'Yes')\n",
-    "                               .otherwise('No')).show()"
+    "              .otherwise('No')).show()"
    ]
   },
   {
@@ -1474,7 +1480,8 @@
    "source": [
     "schema = StructType([StructField('tweet_id', IntegerType(), False),\n",
     "                     StructField('content', StringType(), True)])\n",
-    "df = spark.createDataFrame([[1, 'Vote for Biden'], [2, 'Let us make America great again!']], schema=schema)"
+    "df = spark.createDataFrame(\n",
+    "    [[1, 'Vote for Biden'], [2, 'Let us make America great again!']], schema=schema)"
    ]
   },
   {
@@ -1601,7 +1608,8 @@
     }
    ],
    "source": [
-    "df.withColumn('bonus', when((col('employee_id') % 2 == 1) & (~col('name').startswith('M')), col('salary')).otherwise(0).alias('bonus')).select('employee_id', 'bonus').show()"
+    "df.withColumn('bonus', when((col('employee_id') % 2 == 1) & (~col('name').startswith(\n",
+    "    'M')), col('salary')).otherwise(0).alias('bonus')).select('employee_id', 'bonus').show()"
    ]
   },
   {
@@ -1717,7 +1725,8 @@
     }
    ],
    "source": [
-    "orders_temp = orders_df.filter(year(col('order_date')) == 2019).groupBy(col('buyer_id')).agg(count('order_id').alias('orders_in_2019'))\n",
+    "orders_temp = orders_df.filter(year(col('order_date')) == 2019).groupBy(\n",
+    "    col('buyer_id')).agg(count('order_id').alias('orders_in_2019'))\n",
     "orders_temp.show()"
    ]
   },
@@ -1861,7 +1870,8 @@
     }
    ],
    "source": [
-    "max_salary = employee_df.groupby(col('departmentId')).max('salary').withColumnRenamed('max(salary)', 'max_salary')\n",
+    "max_salary = employee_df.groupby(col('departmentId')).max(\n",
+    "    'salary').withColumnRenamed('max(salary)', 'max_salary')\n",
     "max_salary.show()"
    ]
   },
@@ -1889,20 +1899,202 @@
    "source": [
     "max_salary = max_salary.withColumnRenamed('departmentId', 'depId')\n",
     "employee_df = employee_df.withColumnRenamed('name', 'empName')\n",
-    "employee_df.join(max_salary, \n",
-    "                 (employee_df['departmentId'] == max_salary['depId']) \n",
-    "                 & (employee_df['salary'] == max_salary['max_salary']), \n",
+    "employee_df.join(max_salary,\n",
+    "                 (employee_df['departmentId'] == max_salary['depId'])\n",
+    "                 & (employee_df['salary'] == max_salary['max_salary']),\n",
     "                 how='inner')\\\n",
-    "    .join(department_df, \n",
-    "          employee_df['departmentId'] == department_df['id'], \n",
+    "    .join(department_df,\n",
+    "          employee_df['departmentId'] == department_df['id'],\n",
     "          how='inner')\\\n",
     "    .select(col('name').alias('Department'), col('empName').alias('Employee'), col('salary').alias('Salary')).show(truncate=False)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c61b083",
+   "metadata": {},
+   "source": [
+    "#### The Number of Rich Customers\n",
+    "#### https://leetcode.com/problems/the-number-of-rich-customers/description/?envType=study-plan-v2&envId=30-days-of-pandas&lang=pythondata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7312f122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2cd2569e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(io.StringIO('''\n",
+    "bill_id,customer_id,amount\n",
+    "6,1,549\n",
+    "8,1,834\n",
+    "4,2,394\n",
+    "11,3,657\n",
+    "13,3,257\n",
+    "'''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "102125f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bill_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>257</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bill_id  customer_id  amount\n",
+       "0        6            1     549\n",
+       "1        8            1     834\n",
+       "2        4            2     394\n",
+       "3       11            3     657\n",
+       "4       13            3     257"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2b26b8e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.createDataFrame(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e8f80241",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------+------+\n",
+      "|bill_id|customer_id|amount|\n",
+      "+-------+-----------+------+\n",
+      "|      6|          1|   549|\n",
+      "|      8|          1|   834|\n",
+      "|      4|          2|   394|\n",
+      "|     11|          3|   657|\n",
+      "|     13|          3|   257|\n",
+      "+-------+-----------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "bea0b603",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|rich_count|\n",
+      "+----------+\n",
+      "|         2|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.filter(col('amount') > 500).select(countDistinct(col('customer_id')).alias('rich_count')).show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1952ce7a",
+   "id": "59577fa9",
    "metadata": {},
    "outputs": [],
    "source": []
