--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType\n",
-    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year, countDistinct\n",
+    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year, countDistinct, round\n",
     "from datetime import datetime"
    ]
   },
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/15 16:04:17 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/15 16:04:17 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/18 01:00:35 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/18 01:00:35 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/15 16:04:27 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/18 01:00:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -2092,9 +2092,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59577fa9",
+   "metadata": {},
+   "source": [
+    "#### Project Employees I\n",
+    "#### https://leetcode.com/problems/project-employees-i/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "440bce30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_schema = StructType([StructField('project_id', IntegerType(), False),\n",
+    "                            StructField('employee_id', IntegerType(), True)])\n",
+    "project_df = spark.createDataFrame([[1, 1],\n",
+    "                                    [1, 2],\n",
+    "                                    [1, 3],\n",
+    "                                    [2, 1],\n",
+    "                                    [2, 4]], schema=project_schema)\n",
+    "\n",
+    "employee_schema = StructType([StructField('employee_id', IntegerType(), False),\n",
+    "                              StructField('name', StringType(), False),\n",
+    "                              StructField('experience_years', IntegerType(), True)])\n",
+    "employee_df = spark.createDataFrame([[1, 'Khaled', 3],\n",
+    "                                     [2, 'Ali', 2],\n",
+    "                                     [3, 'John', 1],\n",
+    "                                     [4, 'Doe', 2]], schema=employee_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "01d5cee0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------+\n",
+      "|project_id|employee_id|\n",
+      "+----------+-----------+\n",
+      "|         1|          1|\n",
+      "|         1|          2|\n",
+      "|         1|          3|\n",
+      "|         2|          1|\n",
+      "|         2|          4|\n",
+      "+----------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "project_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "bbe68e2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+------+----------------+\n",
+      "|employee_id|  name|experience_years|\n",
+      "+-----------+------+----------------+\n",
+      "|          1|Khaled|               3|\n",
+      "|          2|   Ali|               2|\n",
+      "|          3|  John|               1|\n",
+      "|          4|   Doe|               2|\n",
+      "+-----------+------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employee_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6d5fbc8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------+\n",
+      "|project_id|average_years|\n",
+      "+----------+-------------+\n",
+      "|         1|          2.0|\n",
+      "|         2|          2.5|\n",
+      "+----------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "project_df.join(employee_df, on='employee_id', how='inner')\\\n",
+    "    .groupBy('project_id').avg('experience_years')\\\n",
+    "    .select(col('project_id'), round(col('avg(experience_years)'), 2).alias('average_years')).show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59577fa9",
    "metadata": {},
    "outputs": [],
    "source": []
